--- a/i3/config
+++ b/i3/config
@@ -104,7 +104,7 @@ set $ws8 8
 set $ws9 9
 # games
 set $ws10 10: 
-set $wsf1 F1:
+set $wsf1 F1
 set $wsf2 F2
 set $wsf3 F3
 set $wsf4 F4
@@ -140,18 +140,18 @@ bindsym $mod+7   workspace $ws7
 bindsym $mod+8   workspace $ws8
 bindsym $mod+9   workspace $ws9
 bindsym $mod+0   workspace $ws10
-bindsym $mod+F1  workspace 11
-bindsym $mod+F2  workspace 12
-bindsym $mod+F3  workspace 13
-bindsym $mod+F4  workspace 14
-bindsym $mod+F5  workspace 15
-bindsym $mod+F6  workspace 16
-bindsym $mod+F7  workspace 17
-bindsym $mod+F8  workspace 18
-bindsym $mod+F9  workspace 19
-bindsym $mod+F10 workspace 20
-bindsym $mod+F11 workspace 21
-bindsym $mod+F12 workspace 22
+bindsym $mod+F1  workspace $wsf1
+bindsym $mod+F2  workspace $wsf2
+bindsym $mod+F3  workspace $wsf3
+bindsym $mod+F4  workspace $wsf4
+bindsym $mod+F5  workspace $wsf5
+bindsym $mod+F6  workspace $wsf6
+bindsym $mod+F7  workspace $wsf7
+bindsym $mod+F8  workspace $wsf8
+bindsym $mod+F9  workspace $wsf9
+bindsym $mod+F10 workspace $wsf10
+bindsym $mod+F11 workspace $wsf11
+bindsym $mod+F12 workspace $wsf12
 bindsym $mod+Escape workspace back_and_forth
 
 # move focused container to workspace
