--- a/i3/config
+++ b/i3/config
@@ -345,6 +345,8 @@ bindsym $mod+n exec i3-input -F 'rename workspace to "%s"' -P 'New name for this
 # load layouts
 # exec --no-startup-id "i3-msg 'workspace $ws4; append_layout ~/.i3/workspace-4.json';i3-msg 'workspace $ws1'"
 
+exec --no-startup-id "i3-msg 'workspace $ws1'"
+
 # load startup scripts
 exec --no-startup-id ~/dotfiles/scripts/i3_startup.sh
 exec --no-startup-id compton
