--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,12 @@
 [submodule "oh-my-zsh/custom/alien"]
 	path = oh-my-zsh/custom/alien
 	url = git@github.com:eendroroy/alien.git
+[submodule "oh-my-zsh"]
+	path = oh-my-zsh
+	url = git@github.com:robbyrussell/oh-my-zsh.git
+[submodule "oh-my-zsh-themes/powerlevel9k"]
+	path = oh-my-zsh-themes/powerlevel9k
+	url = https://github.com/bhilburn/powerlevel9k.git
+[submodule "oh-my-zsh-themes/oh-my-zsh-candy-light"]
+	path = oh-my-zsh-themes/oh-my-zsh-candy-light
+	url = https://github.com/RanaExMachina/oh-my-zsh-candy-light
