switched back to i3

--- a/i3status.conf
+++ b/i3status.conf
@@ -6,20 +6,13 @@ general {
 }
 
 order += "volume master"
-#order += "battery 0"
-#order += "battery 1"
 order += "battery 2"
-# order += "run_watch DHCP"
-# order += "run_watch VPN"
+order += "run_watch VPN"
 order += "ethernet enp0s25"
 order += "wireless wlp3s0"
 order += "load"
 order += "disk /"
 order += "time"
-
-# run_watch VPN {
-#         pidfile = "/var/run/vpnc/pid"
-# }
 
 ethernet enp0s25 {
         # if you use %speed, i3status requires root privileges
@@ -28,31 +21,7 @@ ethernet enp0s25 {
         format_down = ""
 }
 
-battery 0 {
-        format = "%status %percentage"
-        path = "/sys/class/power_supply/BAT0/uevent"
-        low_threshold = 90
-        threshold_type = percent
-        integer_battery_capacity = true
-        status_chr =  
-        status_full = 
-        status_bat = 
-}
-
-battery 1 {
-        format = "%status %percentage"
-        path = "/sys/class/power_supply/BAT1/uevent"
-        low_threshold = 30
-        threshold_type = percent
-        format_down = "-"
-        integer_battery_capacity = true
-        status_chr = 
-        status_full = 
-        status_bat = 
-}
-
 battery 2 {
-        #format = "%status %percentage %emptytime %consumption"
         format = "%status %percentage"
         format_down = "No battery"
         path = "/home/nicolai/dotfiles/scripts/battery/uevent"
@@ -60,14 +29,10 @@ battery 2 {
         hide_seconds = true
         threshold_type = percentage
         integer_battery_capacity = true
-        #status_chr = 
-        #status_full = 
-        #status_bat = 
-        #status_unk = 
-        status_chr = "⚡"
-        status_bat = "🔋"
-        status_unk = "🔋"
-        status_full = "🔋"
+        status_chr = ""
+        status_bat = "ɀ"
+        status_unk = ""
+        status_full = ""
 }
 
 disk "/" {
@@ -82,13 +47,8 @@ wireless wlp3s0 {
         format_down = ": down"
 }
 
-run_watch DHCP {
-        # pidfile = "/var/run/dhclient*.pid"
-        pidfile = "/var/run/dhcpcd*.pid"
-}
-
 time {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = " %Y-%m-%d  %H:%M:%S "
 }
 
 load {
@@ -103,28 +63,3 @@ volume master {
         mixer = "Master"
         mixer_idx = 0
 }
-
-#battery 0 {
-#        format = "%status %percentage %emptytime %consumption"
-#        path = "/sys/class/power_supply/BAT0/uevent"
-#        # format = " %status %percentage %emptytime %consumption"
-#        low_threshold = 10
-#        threshold_type = percent
-#        integer_battery_capacity = true
-#        status_chr = 
-#        status_full = 
-#        status_bat = 
-#}
-#
-#battery 1 {
-#        format = "%status %percentage %emptytime %consumption"
-#        path = "/sys/class/power_supply/BAT1/uevent"
-#        # format = " %status %percentage %emptytime %consumption"
-#        low_threshold = 10
-#        threshold_type = percent
-#        integer_battery_capacity = true
-#        status_chr = 
-#        status_full = 
-#        status_bat = 
-#}
-#
