--- a/i3/config
+++ b/i3/config
@@ -17,7 +17,7 @@ set $mod Mod4
 # font xft:Liberation Mono 8
 #font xft:Hermit Mono 8
 
-font xft:Source Sans Pro Regular 11
+font xft:Source Sans Pro Semibold 11
 #font xft:Overpass 11
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -29,11 +29,12 @@ bindsym $mod+Return exec termite
 
 # kill focused window
 bindsym $mod+q kill
-bindsym $mod+backspace kill
 
 # start dmenu (a program launcher)
 #bindsym Mod1+space exec dmenu_run
-bindsym Mod1+space exec dmenu_run -p "Run:" -fn "Source Sans Pro-12" -nb "#eeeeee" -nf "#444444" -sb "#005faf"
+
+# bindsym Mod1+space exec dmenu_run -p "Run:" -fn "Source Sans Pro-12" -nb "#eeeeee" -nf "#444444" -sb "#005faf"
+
 #bindsym Mod1+space exec dmenu_run -p "Run:" -fn "Overpass-12" -nb "#eeeeee" -nf "#444444" -sb "#005faf"
 set $bg-color #2f343f
 set $text-color #f3f4f5
@@ -99,11 +100,10 @@ set $ws4 4: 
 set $ws5 5: 
 #set $ws6 6: ♫
 set $ws6 6: 
-set $ws7 7: dev
+set $ws7 7: 
 set $ws8 8
 set $ws9 9
-# games
-set $ws10 10: 
+set $ws10 10
 set $wsf1 F1
 set $wsf2 F2
 set $wsf3 F3
@@ -130,53 +130,53 @@ set $wsf12 F12
 # workspace 10 output eDP1
 
 # switch to workspace
-bindsym $mod+1   workspace number 1
-bindsym $mod+2   workspace number 2
-bindsym $mod+3   workspace number 3
-bindsym $mod+4   workspace number 4
-bindsym $mod+5   workspace number 5
-bindsym $mod+6   workspace number 6
-bindsym $mod+7   workspace number 7
-bindsym $mod+8   workspace number 8
-bindsym $mod+9   workspace number 9
-bindsym $mod+0   workspace number 10
-bindsym $mod+F1  workspace number 11
-bindsym $mod+F2  workspace number 12
-bindsym $mod+F3  workspace number 13
-bindsym $mod+F4  workspace number 14
-bindsym $mod+F5  workspace number 15
-bindsym $mod+F6  workspace number 16
-bindsym $mod+F7  workspace number 17
-bindsym $mod+F8  workspace number 18
-bindsym $mod+F9  workspace number 19
-bindsym $mod+F10 workspace number 20
-bindsym $mod+F11 workspace number 21
-bindsym $mod+F12 workspace number 22
+bindsym $mod+1   workspace $ws1
+bindsym $mod+2   workspace $ws2
+bindsym $mod+3   workspace $ws3
+bindsym $mod+4   workspace $ws4
+bindsym $mod+5   workspace $ws5
+bindsym $mod+6   workspace $ws6
+bindsym $mod+7   workspace $ws7
+bindsym $mod+8   workspace $ws8
+bindsym $mod+9   workspace $ws9
+bindsym $mod+0   workspace $ws10
+bindsym $mod+F1  workspace $wsf1
+bindsym $mod+F2  workspace $wsf2
+bindsym $mod+F3  workspace $wsf3
+bindsym $mod+F4  workspace $wsf4
+bindsym $mod+F5  workspace $wsf5
+bindsym $mod+F6  workspace $wsf6
+bindsym $mod+F7  workspace $wsf7
+bindsym $mod+F8  workspace $wsf8
+bindsym $mod+F9  workspace $wsf9
+bindsym $mod+F10 workspace $wsf10
+bindsym $mod+F11 workspace $wsf11
+bindsym $mod+F12 workspace $wsf12
 bindsym $mod+Escape workspace back_and_forth
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
-bindsym $mod+Shift+F1 move container to workspace number 11
-bindsym $mod+Shift+F2 move container to workspace number 12
-bindsym $mod+Shift+F3 move container to workspace number 13
-bindsym $mod+Shift+F4 move container to workspace number 14
-bindsym $mod+Shift+F5 move container to workspace number 15
-bindsym $mod+Shift+F6 move container to workspace number 16
-bindsym $mod+Shift+F7 move container to workspace number 17
-bindsym $mod+Shift+F8 move container to workspace number 18
-bindsym $mod+Shift+F9 move container to workspace number 19
-bindsym $mod+Shift+F10 move container to workspace number 20
-bindsym $mod+Shift+F11 move container to workspace number 21
-bindsym $mod+Shift+F12 move container to workspace number 22
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+F1 move container to workspace  $wsf1
+bindsym $mod+Shift+F2 move container to workspace  $wsf2
+bindsym $mod+Shift+F3 move container to workspace  $wsf3
+bindsym $mod+Shift+F4 move container to workspace  $wsf4
+bindsym $mod+Shift+F5 move container to workspace  $wsf5
+bindsym $mod+Shift+F6 move container to workspace  $wsf6
+bindsym $mod+Shift+F7 move container to workspace  $wsf7
+bindsym $mod+Shift+F8 move container to workspace  $wsf8
+bindsym $mod+Shift+F9 move container to workspace  $wsf9
+bindsym $mod+Shift+F10 move container to workspace $wsf10
+bindsym $mod+Shift+F11 move container to workspace $wsf11
+bindsym $mod+Shift+F12 move container to workspace $wsf12
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -239,37 +239,37 @@ bindsym $mod+p move container to output right, focus output right
 
 
 # workspace assignments
-# assign [class="Firefox"] → $ws2
-# assign [class="Chromium"] → $ws2
-# assign [class="google-chrome"] → $ws2
+assign [class="Firefox"] → $ws2
+assign [class="Chromium"] → $ws2
+assign [class="google-chrome"] → $ws2
 
-# assign [class="Claws-mail"] → $ws3
-# assign [class="Thunderbird"] → $ws3
-# assign [class="Kmail"] → $ws3
-# assign [class="Evolution"] → $ws3
-# assign [class="Geary"] → $ws3
-# assign [class="Gnome-calendar"] → $ws3
+assign [class="Claws-mail"] → $ws3
+assign [class="Thunderbird"] → $ws3
+assign [class="Kmail"] → $ws3
+assign [class="Evolution"] → $ws3
+assign [class="Geary"] → $ws3
+assign [class="Gnome-calendar"] → $ws3
 
-# assign [class="Pidgin"] → $ws4
-# assign [class="Kopete"] → $ws4
-# assign [class="Xchat"] → $ws4
-# assign [class="Hexchat"] → $ws4
-# assign [class="Polari"] → $ws4
-# assign [class="Skype"] → $ws4
-# assign [class="discord"] → $ws4
-# assign [class="Slack"] → $ws4
+assign [class="Pidgin"] → $ws4
+assign [class="Kopete"] → $ws4
+assign [class="Xchat"] → $ws4
+assign [class="Hexchat"] → $ws4
+assign [class="Polari"] → $ws4
+assign [class="Skype"] → $ws4
+assign [class="discord"] → $ws4
+assign [class="Slack"] → $ws4
 
-# assign [class="Liferea"] → $ws5
-# assign [class="feedreader"] → $ws5
+assign [class="Liferea"] → $ws5
+assign [class="feedreader"] → $ws5
 
-# assign [class="Amarok"] → $ws6
-# assign [class="Audacious"] → $ws6
-# assign [class="Deadbeef"] → $ws6
-# assign [class="Sayonara"] → $ws6
-# assign [class="Gmpc"] → $ws6
-# assign [class="Celementine"] → $ws6
-# assign [title="Cantata"] → $ws6
-# assign [class="Spotify"] → $ws6
+assign [class="Amarok"] → $ws6
+assign [class="Audacious"] → $ws6
+assign [class="Deadbeef"] → $ws6
+assign [class="Sayonara"] → $ws6
+assign [class="Gmpc"] → $ws6
+assign [class="Celementine"] → $ws6
+assign [title="Cantata"] → $ws6
+assign [class="Spotify"] → $ws6
 
 # assign [class="Steam"] → $ws10
 # assign [class="Scrolls"] → $ws10
@@ -303,11 +303,18 @@ for_window [title="Battery Warning"] sticky enable
 # spotify
 for_window [class="Spotify"] move to workspace $ws6
 
+# padding left for window titles
+for_window [class=".*"] title_format " %title"
+
+# nautilus
+# for_window [class="Nautilus"] title_format " Nautilus: %title"
+
 # custom keybindings
 
 #bindsym XF86Launch1 exec xset dpms force off
 #bindsym XF86ScreenSaver exec i3lock -c 000000
-bindsym XF86Explorer exec --no-startup-id i3lock -i ~/Pictures/windows.png -u
+bindsym XF86Explorer exec --no-startup-id i3lock -i ~/Pictures/windows.png
+bindsym $mod+Shift+backspace exec --no-startup-id i3lock -i ~/Pictures/windows.png
 
 # toggle 2nd monitor to the right with Fn+F11
 bindsym XF86Display exec ~/dotfiles/scripts/x-toggle-2nd.sh
@@ -353,8 +360,14 @@ exec --no-startup-id compton
 exec --no-startup-id ~/dotfiles/scripts/i3-battery-popup/i3-battery-popup -L 30
 exec --no-startup-id ~/dotfiles/scripts/battery/batt.sh
 
+# gnome stuff
+exec --no-startup-id /usr/lib/gnome-settings-daemon/gsd-xsettings
+exec_always --no-startup-id gnome-power-manager
+
 # load desktop background
 exec_always --no-startup-id nitrogen --restore
+
+exec --no-startup-id albert
 
 ## startup applications
 #exec firefox
@@ -389,15 +402,21 @@ exec_always --no-startup-id nitrogen --restore
 
 #set grey = #2a373e
 # class                 border  backgr. text    indicator
+# client.focused          #005F87 #005F87 #d7d7d7 #2e9ef4
+# client.focused_inactive #222222 #222222 #d7d7d7 #484e50
+# client.unfocused        #222222 #222222 #888888 #292d2e
+# client.urgent           #af0000 #af0000 #d7d7d7 #900000
+
+# class                 border  backgr. text    indicator
 client.focused          #005F87 #005F87 #d7d7d7 #2e9ef4
 client.focused_inactive #222222 #222222 #d7d7d7 #484e50
 client.unfocused        #222222 #222222 #888888 #292d2e
-client.urgent           #af0000 #af0000 #d7d7d7 #900000
+client.urgent           #222222 #222222 #af0000 #900000
 
 # general config
 #hide_edge_borders both
 bindsym $mod+b border toggle
-workspace_layout stacking
+workspace_layout stacked
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -405,7 +424,8 @@ bar {
     wheel_up_cmd nop
     wheel_down_cmd nop
     #position top
-    font pango:Source Sans Pro, FontAwesome 10, Icons 10
+    # font pango:Source Sans Pro, FontAwesome 10, Icons 10
+    font pango:Source Sans Pro, FontAwesome 10
     #font pango:Overpass, FontAwesome 10, Icons 10
     #status_command i3status | ~/dotfiles/scripts/i3spotifystatus/pystatus.py
     status_command i3status
