--- a/i3/config
+++ b/i3/config
@@ -95,7 +95,7 @@ bindsym $mod+d focus child
 # workspace names
 set $ws1 1: 
 set $ws2 2: 
-set $ws3 3: 
+set $ws3 3: 
 set $ws4 4: 
 set $ws5 5: 
 #set $ws6 6: ♫
