--- a/i3/config
+++ b/i3/config
@@ -94,7 +94,7 @@ bindsym $mod+d focus child
 
 # workspace names
 set $ws1 1: 
-set $ws2 2: 
+set $ws2 2: 
 set $ws3 3: 
 set $ws4 4: 
 set $ws5 5: 
