--- a/i3/config
+++ b/i3/config
@@ -357,8 +357,8 @@ bindsym $mod+n exec --no-startup-id ~/dotfiles/scripts/i3-rename-workspace.sh
 # load startup scripts
 exec --no-startup-id ~/dotfiles/scripts/i3_startup.sh
 exec --no-startup-id compton
-exec --no-startup-id ~/dotfiles/scripts/i3-battery-popup/i3-battery-popup -L 30
-exec --no-startup-id ~/dotfiles/scripts/battery/batt.sh
+# exec --no-startup-id ~/dotfiles/scripts/i3-battery-popup/i3-battery-popup -L 30
+# exec --no-startup-id ~/dotfiles/scripts/battery/batt.sh
 
 # gnome stuff
 exec --no-startup-id /usr/lib/gnome-settings-daemon/gsd-xsettings
