--- a/i3status.conf
+++ b/i3status.conf
@@ -6,15 +6,15 @@ general {
 }
 
 order += "volume master"
-order += "battery 2"
+/* order += "battery 2" */
 order += "run_watch VPN"
-order += "ethernet enp0s25"
-order += "wireless wlp3s0"
+order += "ethernet enp3s0"
+/* order += "wireless wlp3s0" */
 order += "load"
 order += "disk /"
 order += "time"
 
-ethernet enp0s25 {
+ethernet enp3s0 {
         # if you use %speed, i3status requires root privileges
         format_up = " %ip (%speed)"
         #format_down = ": down"
