--- a/i3/config
+++ b/i3/config
@@ -124,16 +124,16 @@ set $wsf11 F11
 set $wsf12 F12
 
 # # assign workspaces to displays
-# workspace 1 output eDP1
-# workspace 2 output eDP1
-# workspace 3 output eDP1
-# workspace 4 output eDP1
-# workspace 5 output eDP1
-# workspace 6 output eDP1
-# workspace 7 output eDP1
-# workspace 8 output eDP1
-# workspace 9 output eDP1
-# workspace 10 output eDP1
+workspace 1 output DP-1
+workspace 2 output DP-1
+workspace 3 output DP-1
+workspace 4 output DP-1
+workspace 5 output DP-1
+workspace 6 output DP-1
+workspace 7 output HDMI-0
+workspace 8 output HDMI-0
+workspace 9 output HDMI-0
+workspace 10 output HDMI-0
 
 # switch to workspace
 bindsym $mod+1   workspace number 1
@@ -362,7 +362,7 @@ bindsym $mod+n exec --no-startup-id ~/dotfiles/scripts/i3-rename-workspace.sh
 
 # load startup scripts
 exec --no-startup-id ~/dotfiles/scripts/i3_startup.sh
-exec --no-startup-id compton
+exec --no-startup-id compton --no-fading-openclose=true
 # exec --no-startup-id ~/dotfiles/scripts/i3-battery-popup/i3-battery-popup -L 30
 # exec --no-startup-id ~/dotfiles/scripts/battery/batt.sh
 exec --no-startup-id dunst
