--- a/config/termite/config
+++ b/config/termite/config
@@ -29,28 +29,7 @@ scrollback_lines = 10000
 #color15=     #d7d7d7
 
 # # LuciusLight theme
-# background= #eeeeee
-# foreground= #444444
-# cursorColor= #5f87af
-# color0= #444444
-# color8= #444444
-# color1= #af0000
-# color9= #af0000
-# color2= #008700
-# color10= #008700
-# color3= #af5f00
-# color11= #af5f00
-# color4= #005faf
-# color12= #005faf
-# color5= #870087
-# color13= #870087
-# color6= #008787
-# color14= #008787
-# color7= #eeeeee
-# color15= #eeeeee
-
-# LuciusWhite theme
-background= #ffffff
+background= #eeeeee
 foreground= #444444
 cursorColor= #5f87af
 color0= #444444
@@ -67,5 +46,26 @@ color5= #870087
 color13= #870087
 color6= #008787
 color14= #008787
-color7= #ffffff
-color15= #ffffff
+color7= #eeeeee
+color15= #eeeeee
+
+# LuciusWhite theme
+# background= #ffffff
+# foreground= #444444
+# cursorColor= #5f87af
+# color0= #444444
+# color8= #444444
+# color1= #af0000
+# color9= #af0000
+# color2= #008700
+# color10= #008700
+# color3= #af5f00
+# color11= #af5f00
+# color4= #005faf
+# color12= #005faf
+# color5= #870087
+# color13= #870087
+# color6= #008787
+# color14= #008787
+# color7= #ffffff
+# color15= #ffffff
