--- a/i3/config
+++ b/i3/config
@@ -264,6 +264,7 @@ assign [class="Polari"] → $ws4
 assign [class="Skype"] → $ws4
 assign [class="discord"] → $ws4
 assign [class="Slack"] → $ws4
+assign [class="whats-app"] → $ws4
 
 assign [class="Liferea"] → $ws5
 assign [class="feedreader"] → $ws5
