updated i3bar for both computers

--- a/i3status.conf
+++ b/i3status.conf
@@ -6,12 +6,13 @@ general {
 }
 
 order += "volume master"
-/* order += "battery 2" */
+order += "battery 2"
 order += "run_watch VPN"
 order += "ethernet enp3s0"
-/* order += "wireless wlp3s0" */
+order += "wireless wlp3s0"
 order += "load"
 order += "disk /"
+order += "ddate"
 order += "time"
 
 ethernet enp3s0 {
@@ -23,7 +24,7 @@ ethernet enp3s0 {
 
 battery 2 {
         format = "%status %percentage"
-        format_down = "No battery"
+        format_down = ""
         path = "/home/nicolai/dotfiles/scripts/battery/uevent"
         low_threshold = 30
         hide_seconds = true
@@ -44,11 +45,11 @@ disk "/" {
 wireless wlp3s0 {
         format_up = " (%quality at %essid) %ip"
         #format_up = "W: (%quality at %essid, %bitrate) %ip"
-        format_down = ": down"
+        format_down = ""
 }
 
 time {
-        format = " %Y-%m-%d  %H:%M:%S "
+        format = " %H:%M:%S  %Y-%m-%d"
 }
 
 load {
