added unicode widespace as separator for i3bar

--- a/i3status.conf
+++ b/i3status.conf
@@ -1,5 +1,5 @@
 general {
-        separator = "  "
+        separator = "　"
         colors = true
         interval = 1
         output_format = "i3bar"
@@ -48,7 +48,7 @@ wireless wlp3s0 {
 }
 
 time {
-        format = " %H:%M:%S  %Y-%m-%d"
+        format = " %Y-%m-%d　 %H:%M:%S"
 }
 
 load {
