--- a/i3/config
+++ b/i3/config
@@ -123,17 +123,17 @@ set $wsf10 F10
 set $wsf11 F11
 set $wsf12 F12
 
-# # assign workspaces to displays
-workspace 1  output HDMI-0
-workspace 2  output HDMI-0
-workspace 3  output HDMI-0
-workspace 4  output HDMI-0
-workspace 5  output HDMI-0
-workspace 6  output DP-1
-workspace 7  output DP-1
-workspace 8  output DP-1
-workspace 9  output DP-1
-workspace 10 output DP-1
+# assign workspaces to displays
+# workspace 1  output DP-2
+# workspace 2  output DP-2
+# workspace 3  output DP-2
+# workspace 4  output DP-2
+# workspace 5  output DP-2
+# workspace 6  output DP-1
+# workspace 7  output DP-1
+# workspace 8  output DP-1
+# workspace 9  output DP-1
+# workspace 10 output DP-1
 
 # switch to workspace
 bindsym $mod+1   workspace number 1
