--- a/config/termite/config
+++ b/config/termite/config
@@ -1,7 +1,7 @@
 [options]
 #font = Liberation Mono 11
-# font = Source Code Pro Medium 11
-font = SauceCodePro Nerd Font Medium 11
+font = Source Code Pro for Powerline, Regular 11
+# font = SauceCodePro Nerd Font Medium 10
 #font = Monaco 10
 
 scrollback_lines = 10000
