--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -63,7 +63,7 @@ ext x?html?, has firefox,          X, flag f = firefox -- "$@"
 #mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 mime ^text,  label editor, flag f = env NVIM_GTK_NO_HEADERBAR=1 nvim-gtk -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php, flag f = env NVIM_GTK_NO_HEADERBAR=1 nvim-gtk -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
@@ -170,7 +170,7 @@ label wallpaper, number 14, mime ^image, has feh, X = feh --bg-fill "$1"
 
 # Define the editor for non-text files + pager as last action
               !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ask
-label editor, !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ${VISUAL:-$EDITOR} -- "$@"
+label editor, !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php, flag f = ${VISUAL:-$EDITOR} -- "$@"
 label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" -- "$@"
 
 # The very last action, so that it's never triggered accidentally, is to execute a program:
