rifle: nvim-gtk -> nvim

--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -60,10 +60,12 @@ ext x?html?, has firefox,          X, flag f = firefox -- "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-#mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
-mime ^text,  label editor, flag f = env NVIM_GTK_NO_HEADERBAR=1 nvim-gtk -- "$@"
+# mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+# mime ^text,  label editor, flag f = env NVIM_GTK_NO_HEADERBAR=1 nvim-gtk -- "$@"
+mime ^text, label editor = ${VISUAL:-$EDITOR} -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php, flag f = env NVIM_GTK_NO_HEADERBAR=1 nvim-gtk -- "$@"
+# !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php, flag f = env NVIM_GTK_NO_HEADERBAR=1 nvim-gtk -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
