--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -17,3 +17,4 @@ gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=none
 gtk-modules=canberra-gtk-module
+gtk-application-prefer-dark-theme=0
