--- a/i3/config
+++ b/i3/config
@@ -364,7 +364,7 @@ bindsym $mod+n exec --no-startup-id ~/dotfiles/scripts/i3-rename-workspace.sh
 # load startup scripts
 exec --no-startup-id ~/dotfiles/scripts/i3_startup.sh
 
-exec --no-startup-id compton --no-fading-openclose=true
+exec --no-startup-id compton --no-fading-openclose
 
 # fix screen tearing on multi monitor setup
 exec --no-startup-id compton --backend glx --paint-on-overlay --vsync opengl-swc
