--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -329,30 +329,6 @@ map uv      mark_files all=True val=False
 map V       toggle_visual_mode
 map uV      toggle_visual_mode reverse=True
 
-# For the nostalgics: Midnight Commander bindings
-map <F1> help
-map <F2> rename_append
-map <F3> display_file
-map <F4> edit
-map <F5> copy
-map <F6> cut
-map <F7> console mkdir%space
-map <F8> console delete
-map <F10> exit
-
-# In case you work on a keyboard with dvorak layout
-map <UP>       move up=1
-map <DOWN>     move down=1
-map <LEFT>     move left=1
-map <RIGHT>    move right=1
-map <HOME>     move to=0
-map <END>      move to=-1
-map <PAGEDOWN> move down=1   pages=True
-map <PAGEUP>   move up=1     pages=True
-map <CR>       move right=1
-#map <DELETE>   console delete
-map <INSERT>   console touch%space
-
 # VIM-like
 copymap <UP>       k
 copymap <DOWN>     j
@@ -418,7 +394,7 @@ map pL paste_symlink relative=True
 map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
-map dD console delete
+map dD shell -s trash-put %s
 
 map dd cut
 map ud uncut
