ranger: open audio files with mpv with gui

--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -88,7 +88,7 @@ ext php = php -- "$1"
 #--------------------------------------------
 # Audio without X
 #-------------------------------------------
-mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
+mime ^audio|ogg$, terminal, has mpv      = mpv --player-operation-mode=pseudo-gui -- "$@"
 ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 
 #--------------------------------------------
