--- a/i3/config
+++ b/i3/config
@@ -426,6 +426,8 @@ client.urgent           #222222 #222222 #af0000 #900000
 bindsym $mod+b border toggle
 workspace_layout stacked
 
+# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
