--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -7,6 +7,7 @@ gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-menu-images=0
 gtk-button-images=0
 gtk-decoration-layout=menu:
+gtk-cursor-blink=false
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=24
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
