--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -90,18 +90,18 @@ font:
 
   # The bold font face
   bold:
-    family: Source Code Pro # should be "Menlo" or something on macOS.
+    family: Source Code Pro for Powerline # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     style: Semibold
 
   # The italic font face
   italic:
-    family: Source Code Pro # should be "Menlo" or something on macOS.
+    family: Source Code Pro for Powerline # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     style: Italic
 
   # Point size of the font
-  size: 9.0
+  size: 11.0
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
