--- a/i3status.conf
+++ b/i3status.conf
@@ -8,13 +8,21 @@ general {
 order += "volume master"
 order += "battery 2"
 order += "run_watch VPN"
-order += "ethernet enp0s25"
-order += "ethernet enp3s0"
-order += "ethernet enp5s0"
-order += "wireless wlp3s0"
+order += "ethernet _first_"
+# order += "ethernet enp0s25"
+# order += "ethernet enp3s0"
+# order += "ethernet enp5s0"
+# order += "wireless wlp3s0"
 order += "load"
 order += "disk /"
 order += "time"
+
+ethernet _first_ {
+        # if you use %speed, i3status requires root privileges
+        format_up = " %ip (%speed)"
+        #format_down = ": down"
+        format_down = ""
+}
 
 ethernet enp0s25 {
         # if you use %speed, i3status requires root privileges
