--- a/i3status.conf
+++ b/i3status.conf
@@ -6,14 +6,12 @@ general {
 }
 
 order += "volume master"
-order += "battery 2"
+order += "battery"
 order += "run_watch VPN"
 order += "ethernet _first_"
-# order += "ethernet enp0s25"
-# order += "ethernet enp3s0"
-# order += "ethernet enp5s0"
-# order += "wireless wlp3s0"
-order += "load"
+order += "wireless _first_"
+order += "cpu_usage"
+# order += "load"
 order += "disk /"
 order += "time"
 
@@ -24,28 +22,7 @@ ethernet _first_ {
         format_down = ""
 }
 
-ethernet enp0s25 {
-        # if you use %speed, i3status requires root privileges
-        format_up = " %ip (%speed)"
-        #format_down = ": down"
-        format_down = ""
-}
-
-ethernet enp3s0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = " %ip (%speed)"
-        #format_down = ": down"
-        format_down = ""
-}
-
-ethernet enp5s0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = " %ip (%speed)"
-        #format_down = ": down"
-        format_down = ""
-}
-
-battery 2 {
+battery {
         format = "%status %percentage"
         format_down = ""
         path = "/home/nicolai/dotfiles/scripts/battery/uevent"
@@ -65,7 +42,7 @@ disk "/" {
         threshold_type = percentage_free
 }
 
-wireless wlp3s0 {
+wireless _first_ {
         format_up = " (%quality at %essid) %ip"
         #format_up = "W: (%quality at %essid, %bitrate) %ip"
         format_down = ""
@@ -73,6 +50,10 @@ wireless wlp3s0 {
 
 time {
         format = "%Y-%m-%d　%H:%M:%S"
+}
+
+cpu_usage {
+        format = " %usage"
 }
 
 load {
