--- a/i3status.conf
+++ b/i3status.conf
@@ -6,7 +6,8 @@ general {
 }
 
 order += "volume master"
-order += "battery"
+# order += "battery"
+order += "battery all"
 order += "run_watch VPN"
 order += "ethernet _first_"
 order += "wireless _first_"
@@ -20,6 +21,20 @@ ethernet _first_ {
         format_up = " %ip (%speed)"
         #format_down = ": down"
         format_down = ""
+}
+
+battery all {
+        format = "%status %percentage"
+        format_down = ""
+        path = "/sys/class/power_supply/CMB%d/uevent"
+        low_threshold = 30
+        hide_seconds = true
+        threshold_type = percentage
+        integer_battery_capacity = true
+        status_chr = ""
+        status_bat = "ɀ"
+        status_unk = ""
+        status_full = ""
 }
 
 battery {
