--- a/i3status.conf
+++ b/i3status.conf
@@ -6,7 +6,7 @@ general {
 }
 
 order += "volume master"
-# order += "battery"
+# order += "battery 2"
 order += "battery all"
 order += "run_watch VPN"
 order += "ethernet _first_"
@@ -37,7 +37,7 @@ battery all {
         status_full = ""
 }
 
-battery {
+battery 2 {
         format = "%status %percentage"
         format_down = ""
         path = "/home/nicolai/dotfiles/scripts/battery/uevent"
