--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -189,9 +189,9 @@ colors:
   normal:
     black:   '0x444444'
     red:     '0xaf0000'
-    green:   '0x008700'
+    green:   '0x87d7af'
     yellow:  '0xaf5f00'
-    blue:    '0x005faf'
+    blue:    '0x87d7ff'
     magenta: '0x870087'
     cyan:    '0x008787'
     white:   '0xeeeeee'
@@ -200,9 +200,9 @@ colors:
   bright:
     black:   '0x444444'
     red:     '0xaf0000'
-    green:   '0x008700'
+    green:   '0x87d7af'
     yellow:  '0xaf5f00'
-    blue:    '0x005faf'
+    blue:    '0x87d7ff'
     magenta: '0x870087'
     cyan:    '0x008787'
     white:   '0xeeeeee'
