--- a/i3/config
+++ b/i3/config
@@ -318,10 +318,9 @@ for_window [class=".*"] title_format " %title"
 
 # custom keybindings
 
-#bindsym XF86Launch1 exec xset dpms force off
-#bindsym XF86ScreenSaver exec i3lock -c 000000
-bindsym XF86Explorer exec --no-startup-id i3lock -i ~/Pictures/windows.png
-bindsym $mod+Shift+backspace exec --no-startup-id i3lock -i ~/Pictures/windows.png
+# screen lock
+bindsym XF86Explorer exec --no-startup-id ~/dotfiles/scripts/lock_screen.sh
+bindsym $mod+Down exec --no-startup-id ~/dotfiles/scripts/lock_screen.sh
 
 # toggle 2nd monitor to the right with Fn+F11
 bindsym XF86Display exec ~/dotfiles/scripts/x-toggle-2nd.sh
