--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -124,10 +124,6 @@ font:
 # Should display the render timer
 render_timer: false
 
-# Use custom cursor colors. If true, display the cursor in the cursor.foreground
-# and cursor.background colors, otherwise invert the colors of the cursor.
-custom_cursor_colors: false
-
 # Colors (Tomorrow Night Bright)
 # colors:
 #   # Default colors
@@ -272,21 +268,22 @@ mouse:
   # or triple click.
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
+  hide_when_typing: false
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
 dynamic_title: true
 
-hide_cursor_when_typing: false
 
+cursor:
 # Style of the cursor
 #
 # Values for 'cursor_style':
 # - Block
 # - Underline
 # - Beam
-cursor_style: Block
+  style: Block
 
 # Live config reload (changes require restart)
 live_config_reload: true
