--- a/config/i3status/config
+++ b/config/i3status/config
@@ -49,7 +49,7 @@ wireless _first_ {
 }
 
 time {
-        format = "%Y-%m-%d  %H:%M:%S"
+        format = "%Y-%m-%d, %a  %H:%M:%S"
 }
 
 cpu_usage {
