Change i3 terminal to gnome-terminal

--- a/config/i3/config
+++ b/config/i3/config
@@ -11,7 +11,7 @@ font xft:Source Sans Pro Semibold 11
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+q kill
