--- a/config/i3/config
+++ b/config/i3/config
@@ -2,7 +2,7 @@
 
 set $mod Mod4
 
-bindsym Mod1+space exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu -i'
+bindsym Mod1+space exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn 'Source Sans Pro Semibold-13'"
 
 # Font for window titles.
 font xft:Source Sans Pro Semibold 11
