--- a/config/i3/config
+++ b/config/i3/config
@@ -123,6 +123,28 @@ bindsym $mod+Shift+F10 move container to workspace number 20
 bindsym $mod+Shift+F11 move container to workspace number 21
 bindsym $mod+Shift+F12 move container to workspace number 22
 
+# assign workspaces to displays
+workspace 1  output DP-1
+workspace 2  output DP-1
+workspace 3  output DP-1
+workspace 4  output DP-1
+workspace 5  output DP-1
+workspace 6  output DP-1
+workspace 7  output DP-1
+workspace 8  output DP-1
+workspace 9  output DP-1
+workspace 10 output DP-1
+workspace 11 output DP-2
+workspace 12 output DP-2
+workspace 13 output DP-2
+workspace 14 output DP-2
+workspace 15 output DP-2
+workspace 16 output DP-2
+workspace 17 output DP-2
+workspace 18 output DP-2
+workspace 19 output DP-2
+workspace 20 output DP-2
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -173,6 +195,8 @@ bindsym $mod+p move container to output right, focus output right
 
 
 # workspace assignments
+assign [class="Nextcloud"] → $ws1
+
 assign [class="Firefox"] → $ws2
 assign [class="Chromium"] → $ws2
 assign [class="google-chrome"] → $ws2
@@ -246,7 +270,6 @@ bindsym $mod+z exec --no-startup-id ~/dotfiles/scripts/lock_screen.sh
 
 # toggle 2nd monitor to the right with Fn+F11
 bindsym XF86Display exec ~/dotfiles/scripts/x-toggle-2nd.sh
-
 #bindsym Mod1+XF86Display exec x-mirror.sh
 #bindsym Shift+XF86Display exec x-switch-display.sh
 
@@ -265,7 +288,6 @@ bindsym XF86AudioPlay exec --no-startup-id dbus-send --print-reply --dest=org.mp
 bindsym XF86AudioNext exec --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
 bindsym XF86AudioPrev exec --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
 # bindsym $mod+Up exec --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Stop
-
 
 # screen brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id ~/dotfiles/scripts/backlight.sh 1.5
