Add commands to go up and down the container tree in i3

--- a/config/i3/config
+++ b/config/i3/config
@@ -193,6 +193,9 @@ bindsym $mod+Mod1+shift+Right move workspace to output right
 bindsym $mod+o move container to output left, focus output left
 bindsym $mod+p move container to output right, focus output right
 
+# go up and down in the container tree
+bindsym $mod+x                focus parent
+bindsym $mod+c                focus child
 
 # workspace assignments
 assign [class="Nextcloud"] → $ws1
