--- a/config/i3/config
+++ b/config/i3/config
@@ -331,7 +331,7 @@ bar {
     wheel_up_cmd nop
     wheel_down_cmd nop
     font pango:Source Sans Pro, FontAwesome 10
-    status_command i3status
+    status_command i3status | ~/dotfiles/scripts/i3spotifystatus/pystatus.py
     tray_output LVDS1
         colors {
             ## class            border  backgr. text
