--- a/config/rofi/config
+++ b/config/rofi/config
@@ -1,4 +1,4 @@
-rofi.show-icons:            false
+rofi.show-icons:            true
 rofi.modi:                  drun,run,window,ssh
 rofi.lines:                 7
 rofi.line-padding:          10
