--- a/config/i3/config
+++ b/config/i3/config
@@ -342,7 +342,7 @@ exec --no-startup-id hsetroot -solid "#303030"
 
 # class                     border      backgr. text        indicator
 client.focused		        #2C313D     #2e3440 $blue       $background
-client.focused_inactive	    #2C313D     #3b4252 $background       $background
+client.focused_inactive	    #2C313D     #3b4252 $background $background
 client.unfocused	        #2C313D     #3b4252 $background $background
 client.urgent		        #2C313D     #3b4252 $red        $background
 client.placeholder	        $background #3b4252 $background $background
@@ -361,10 +361,10 @@ bar {
     tray_output LVDS1
         colors {
             ## class            border  backgr. text
-            focused_workspace   $blue   $blue   #eeeeee
+            focused_workspace   $blue   $blue   #222222
             active_workspace    #444444 #444444 #eeeeee
             inactive_workspace  #222222 #222222 #eeeeee
-            urgent_workspace    $red    $red    #eeeeee
+            urgent_workspace    #ff0000 #ff0000 #222222
 
             background #222222
             statusline #eeeeee
