--- a/config/i3/config
+++ b/config/i3/config
@@ -337,7 +337,7 @@ exec --no-startup-id dunst
 exec --no-startup-id hsetroot -solid "#303030"
 
 # class                     border      backgr. text        indicator
-client.focused              #3b4252     #3b4252 $blue       $background
+client.focused              $blue       #3b4252 $background $background
 client.focused_inactive     #2e3440     #2e3440 $background $background
 client.unfocused            #2e3440     #2e3440 $background $background
 client.urgent               #2e3440     #2e3440 $red        $background
@@ -357,10 +357,10 @@ bar {
     tray_output LVDS1
         colors {
             ## class            border  backgr. text
-            focused_workspace   $blue   $blue   #222222
+            focused_workspace   $blue   #002b36 #eeeeee
             active_workspace    #002b36 #002b36 #eeeeee
             inactive_workspace  #002b36 #002b36 #eeeeee
-            urgent_workspace    #ff0000 #ff0000 #222222
+            urgent_workspace    #ff0000 #002b36 #eeeeee
 
             background #002b36
             statusline #eeeeee
