--- a/config/i3/config
+++ b/config/i3/config
@@ -1,4 +1,4 @@
-# I use `super` as modifier key because it's obviously superior.
+# I use `super` as modifier key because it's obviously superi3: Update colorsior.
 
 set $mod Mod4
 
@@ -174,9 +174,8 @@ workspace 20 output DP-2
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'systemctl poweroff -i'"
+# exit i3
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m '' -B 'Reboot' 'systemctl reboot' -B 'Shutdown' 'systemctl poweroff -i'"
 
 # resize window (you can also use the mouse for that)
 bindsym $mod+control+h resize shrink width 10 px or 3 ppt
