i3: Update color for inactive windows

--- a/config/i3/config
+++ b/config/i3/config
@@ -337,8 +337,8 @@ exec --no-startup-id hsetroot -solid "#303030"
 
 # class                     border      background  text        indicator
 client.focused              #268bd2     #3b4252     #eeeeee     #002b36
-client.focused_inactive     #2e3440     #2e3440     #4c566a     #002b36
-client.unfocused            #2e3440     #2e3440     #4c566a     #002b36
+client.focused_inactive     #2e3440     #2e3440     #666666
+client.unfocused            #2e3440     #2e3440     #666666     #002b36
 client.urgent               #2e3440     #2e3440     #bf616a     #002b36
 client.placeholder          #002b36     #002b36     #002b36     #002b36
 
