--- a/config/i3/config
+++ b/config/i3/config
@@ -339,7 +339,7 @@ exec --no-startup-id hsetroot -solid "#303030"
 client.focused              #268bd2     #3b4252     #eeeeee     #002b36
 client.focused_inactive     #2e3440     #2e3440     #666666
 client.unfocused            #2e3440     #2e3440     #666666     #002b36
-client.urgent               #2e3440     #2e3440     #bf616a     #002b36
+client.urgent               #bf616a     #2e3440     #bf616a     #002b36
 client.placeholder          #002b36     #002b36     #002b36     #002b36
 
 # general config
